[metadata]
name = fintest
version = 0.1.0
author = Kashif Iftikhar
description = Functional and Integration Testing toolkit for python.
license = MIT
url = https://github.com/kashifpk/fintest
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     hpt-generate-label-samples = hpt.labels.label_samples:main
#     hpt-print-label-samples = hpt.labels.label_samples_printer:main

[flake8]
max-line-length = 100
